--- a/website/docs/reference/sources/syslog.md.erb
+++ b/website/docs/reference/sources/syslog.md.erb
@@ -44,10 +44,10 @@ Each line is read until a new line delimiter (the `0xA` byte) is found.
 ### Parsing
 
 Vector makes a _best effort_ to parse the various Syslog formats out in the
-wild. This includes [RFC 5424][urls.syslog_5424], [RFC 3164][urls.syslog_3164],
-and other common variations (such as the Nginx Syslog style). It's unfortunate
-that the Syslog specification is not more accurately followed, but we hope
-Vector insulates you from these diviations.
+wild. This includes [RFC 6587][urls.syslog_6587], [RFC 5424][urls.syslog_5424],
+[RFC 3164][urls.syslog_3164], and other common variations (such as the Nginx
+Syslog style). It's unfortunate that the Syslog specification is not more 
+accurately followed, but we hope Vector insulates you from these diviations.
 
 If parsing fails, Vector will include the entire Syslog line in the `message`
 key. If you find this happening often, we recommend using the
