--- a/.meta/sources/kafka.toml.erb
+++ b/.meta/sources/kafka.toml.erb
@@ -116,5 +116,6 @@ type = "timestamp"
 examples = ["2019-11-01T21:15:47.443232Z"]
 required = true
 description = """\
-The exact time the event was ingested.\
+Timestamp extracted from the event, or, if not present, \
+the exact time the event was ingested.\
 """
